--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,32 +1,66 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
- 
-    <EditText
-        android:id="@+id/ed"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:lines="5" android:gravity="top|left"
-        android:inputType="textMultiLine"
-    android:scrollHorizontally="false"
-    android:minWidth="10.0dip"
-    android:maxWidth="5.0dip"
-        android:layout_weight="1"/>
- 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Write File to SDCARD" />
-     
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Read File from SDCARD" />
-   
- 
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
+    xmlns:tools="http://schemas.android.com/tools"  
+    android:layout_width="match_parent"  
+    android:layout_height="match_parent"  
+    tools:context=".MainActivity" >  
+  
+    <EditText  
+        android:id="@+id/editText1"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"  
+        android:layout_alignParentRight="true"  
+        android:layout_alignParentTop="true"  
+        android:layout_marginRight="20dp"  
+        android:layout_marginTop="24dp"  
+        android:ems="10" >  
+  
+        <requestFocus />  
+    </EditText>  
+  
+    <EditText  
+        android:id="@+id/editText2"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"  
+        android:layout_alignRight="@+id/editText1"  
+        android:layout_below="@+id/editText1"  
+        android:layout_marginTop="24dp"  
+        android:ems="10" />  
+  
+    <TextView  
+        android:id="@+id/textView1"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"  
+        android:layout_alignBaseline="@+id/editText1"  
+        android:layout_alignBottom="@+id/editText1"  
+        android:layout_alignParentLeft="true"  
+        android:text="File Name:" />  
+  
+    <TextView  
+        android:id="@+id/textView2"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"  
+        android:layout_alignBaseline="@+id/editText2"  
+        android:layout_alignBottom="@+id/editText2"  
+        android:layout_alignParentLeft="true"  
+        android:text="Data:" />  
+  
+    <Button  
+        android:id="@+id/button1"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"  
+        android:layout_alignLeft="@+id/editText2"  
+        android:layout_below="@+id/editText2"  
+        android:layout_marginLeft="70dp"  
+        android:layout_marginTop="16dp"  
+        android:text="save" />  
+  
+    <Button  
+        android:id="@+id/button2"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"  
+        android:layout_alignBaseline="@+id/button1"  
+        android:layout_alignBottom="@+id/button1"  
+        android:layout_toRightOf="@+id/button1"  
+        android:text="read" />  
+  
+</RelativeLayout>  
